update dikit
