# app/controllers/userController.js
@@ -273,6 +273,20 @@ exports.terUser = terUser = catchAsync(async (req, res) => {
 exports.modifyUser = catchAsync(async (req, res) => {
   const { username, password } = req.body;
 
+  const superAdmin = await User.findOne({
+    where: {
+      id: req.user.id,
+      roleId: 1,
+    },
+  });
+
+  if (!superAdmin) {
+    return res.status(403).json({
+      status: false,
+      message: 'Permission Denied! Only super admins can modify users.',
+    });
+  }
+
   const user = await User.findOne({
     where: {
       id: req.params.user_id,
@@ -313,13 +327,23 @@ exports.modifyUser = catchAsync(async (req, res) => {
     }
   }
 });
+
 exports.selfModify = catchAsync(async (req, res) => {
-  const user = req.user.id;
+  const userId = req.user.id; // Get the user's ID from the authenticated user
+
+  const user = await User.findOne({
+    where: {
+      id: userId,
+      roleId: {
+        [Op.in]: [2, 3],
+      },
+    },
+  });
 
   if (!user) {
     return res.status(401).json({
       status: false,
-      message: 'Pengguna tidak ditemukan',
+      message: 'User not found or unauthorized to modify data',
     });
   }
 
@@ -327,20 +351,79 @@ exports.selfModify = catchAsync(async (req, res) => {
 
   const hashedPassword = await bcrypt.hash(password, 10);
 
-  const updatedData = await User.update(
+  await User.update(
     {
       password: hashedPassword,
     },
     {
       where: {
-        id: req.user.id,
+        id: userId,
       },
     },
   );
 
   res.status(200).json({
     status: true,
-    message: 'Data pengguna berhasil dimodifikasi',
-    data: updatedData,
+    message: 'User data modified successfully',
   });
 });
+
+exports.deleteUser = catchAsync(async (req, res) => {
+  const user = await User.findOne({
+    where: {
+      id: req.params.id,
+    },
+  });
+
+  if (!user) {
+    res.status(400).json({
+      status: false,
+      message: 'User not found!',
+    });
+  } else {
+    const data = await User.destroy({
+      where: {
+        id: req.params.id,
+      },
+    });
+
+    res.status(200).json({
+      status: true,
+      message: 'User berhasil dihapus',
+      data: data,
+    });
+  }
+});
+exports.whoami = catchAsync(async (req, res) => {
+  const user = req.user;
+  return res.status(200).json({
+    status: true,
+    message: 'succes',
+    data: user,
+  });
+});
+
+exports.logout = (req, res) => {
+  const token = req.header('Authorization');
+
+  if (!token) {
+    return res.status(401).json({
+      status: false,
+      message: 'Unauthorized: No token provided',
+    });
+  }
+
+  jwt.verify(token, JWT_SECRET_KEY, (err, decoded) => {
+    if (err) {
+      return res.status(401).json({
+        status: false,
+        message: 'Unauthorized: Invalid token',
+      });
+    }
+
+    res.status(200).json({
+      status: true,
+      message: 'Logout successful',
+    });
+  });
+};
